# nesos

./: Cargo.toml  README.md
.cargo/: config.toml
src/: allocator.rs  gdt.rs  interrupts.rs  keyboard.rs  lib.rs  main.rs  memory.rs  registers.rs  serial.rs  time.rs  vga_buffer.rs  vga_draw.rs  vga_help.rs
src/emulation/: construct.rs  mod.rs
src/sound/: ac.rs  mod.rs  pc_speaker.rs
tests/: basic_boot.rs
